--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,3 +15,12 @@ dependencies = [
 dev-dependencies = [
     "python-dotenv>=1.0.1"
 ]
+
+[dependency-groups]
+dev = [
+    "aiosqlite>=0.20.0",
+    "anyio>=4.6.2.post1",
+    "httpx>=0.28.0",
+    "mock-alchemy>=0.2.6",
+    "pytest>=8.3.4",
+]
